Updated template page to remove Block component

--- a/.env.example
+++ b/.env.example
@@ -2,15 +2,15 @@
 
 # Create a free PostgreSQL database: https://vercel.com/postgres
 # If you're deploying this template with a Vercel Deploy Button, these will be configured automatically for you.
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NON_POOLING=
+POSTGRES_PRISMA_URL=postgres://avnadmin:AVNS_KoUkXWSSWmvFFp4T00J@themapsdaily-themapsdaily-2cc3.a.aivencloud.com:19178/india_states
+POSTGRES_URL_NON_POOLING=postgres://avnadmin:AVNS_KoUkXWSSWmvFFp4T00J@themapsdaily-themapsdaily-2cc3.a.aivencloud.com:19178/india_states
 
 # Follow the instructions here to create a Google OAuth app: https://refine.dev/blog/nextauth-google-github-authentication-nextjs/#for-googleprovider-make-sure-you-have-a-google-account
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
 # Only for production – generate one here: https://generate-secret.vercel.app/32
-NEXTAUTH_SECRET=
+NEXTAUTH_SECRET=0154319693a026671a7ea5a20895c97d
 
 ## Only required for localhost
 NEXTAUTH_URL=http://localhost:3000
